[core] fix(Drawer): allow clicking behind when hasBackdrop=false (#6650)

--- a/packages/docs-app/src/styles/_examples.scss
+++ b/packages/docs-app/src/styles/_examples.scss
@@ -587,7 +587,8 @@ $docs-hotkey-piano-height: 510px;
 }
 
 #{example("ButtonGroup")},
-#{example("ButtonGroupPopover")} {
+#{example("ButtonGroupPopover")},
+#{example("Drawer")} {
   .docs-example > * {
     margin: 0;
   }
